--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,7 @@ Knes 1.9.8 [2021-07-25]
 
 	- New 0.9375 Cargo module
 	- New 0.9375 Flat Adapter
+	- Fix Waterfall Patch for Cora SL
 	
 Knes 1.9.7 [2021-06-25]
 -------------------------------
