--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,7 @@ Knes 1.9.8 [2021-07-25]
 	- New 0.9375 Cargo module
 	- New 0.9375 Flat Adapter
 	- Fix Waterfall Patch for Cora SL
+	- Add more fuel on Rita2 booster
 	
 Knes 1.9.7 [2021-06-25]
 -------------------------------
@@ -31,8 +32,7 @@ Knes 1.9.6 [2021-05-15]
 	- Fix Crystal laboratory definition
 	- Upscale Crystals growing rate
 	- Fix some packed inventory volume
-	- Reduce Arcas Dockings magnet
-	
+	- Reduce Arcas Dockings magnet	
 	
 Knes 1.9.5 [2021-04-24]
 -------------------------------
