--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,12 @@
-Knes 1.9.8 [2021-07-25]
+Knes 1.9.8 [2021-08-25]
 -------------------------------
 
 	- New 0.9375 Cargo module
 	- New 0.9375 Flat Adapter
 	- Fix Waterfall Patch for Cora SL
 	- Add more fuel on Rita2 booster
+	- Improve Landing Skid with new physical material, nodes and new collider
+	- StarRider and StarWatcher have now nodes to attach skids
 	
 Knes 1.9.7 [2021-06-25]
 -------------------------------
