--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,9 @@
-Knes 1.9.8 [2021-08-25]
+Knes 1.9.9 [WIP]
+-------------------------------
+
+	- Fix STEAM Crystal Module Cost
+	
+Knes 1.9.8 [2021-08-04]
 -------------------------------
 
 	- New 0.9375 Cargo module
