--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,7 @@ Knes 1.9.9 [WIP]
 -------------------------------
 
 	- Fix STEAM Crystal Module Cost
+	- Tweakscale Patch by Lisia
 	
 Knes 1.9.8 [2021-08-04]
 -------------------------------
