--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Knes 1.9.9 [WIP]
 	- Add full localization support (by LiXiuMing)
 	- Add French localization
 	- Fix Tweakscale Patch by Lisia
+	- Reduce Crystals Density
 	
 Knes 1.9.8 [2021-08-04]
 -------------------------------
