--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Knes 1.9.9 [WIP]
 	- Add French localization
 	- Fix Tweakscale Patch by Lisia
 	- Reduce Crystals Density
+	- Reduce Solid Fuel on sepatron
 	
 Knes 1.9.8 [2021-08-04]
 -------------------------------
