--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,7 @@ Knes 1.9.9 [WIP]
 	- Fix Tweakscale Patch by Lisia
 	- Reduce Crystals Density
 	- Reduce Solid Fuel on sepatron
+	- Add some IVA props
 	
 Knes 1.9.8 [2021-08-04]
 -------------------------------
